--- a/template/index.hbs
+++ b/template/index.hbs
@@ -7,7 +7,7 @@
 
         {{>nav}}
         
-        <h1>Welcome to HBS</h1></body>
+        <h1>Welcome to HBS Weather App</h1></body>
 
         <form>
             <input type="text" placeholder="Input city"/>
